--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mic-recorder-to-mp3",
+  "name": "vhd-mic-recorder-to-mp3",
   "version": "2.2.2",
   "description": "Record your microphone audio input and get an audio/mp3 ouput buffer/blob.",
   "main": "dist/index.js",
